--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link href="js\lib\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
-    <link href="css\mycss.css" rel="stylesheet">
+    <link rel="stylesheet/less" href="css/mycss.less" type="text/css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,16 +38,16 @@
             <div class="col-xs-8 col-md-6 col-centered col-min">
                 <div class="item">
                     <div class="content">
-                        <h1>#001 Bulbasaur</h1>
+                        <h1 class="namePokemon">#001 Bulbasaur</h1>
                         <button type="button" class="btn btn-default btn-lg" style="float:left">
                             <img src="media/img/empty-plate.png" height="32" width="32"/></button>
                         <button type="button" class="btn btn-default btn-lg" style="float:left">
                             <img src="media/img/star.png" height="32" width="32"/></button>
                         <div class="info">
-                            Height: 0.7M<br>
-                            Weight: 6.9Kg
+                            <p class="description">Height: 0.7M</p>
+                            <p class="description">Weight: 6.9Kg</p>
                         </div><br>
-                        For some time after its birth, it grows by gaining nourishment from the seed on its back.<br>
+                        <p class="description">For some time after its birth, it grows by gaining nourishment from the seed on its back.</p>
                         <button type="button" class="btn btn-sm typegrass">Grass</button>
                         <button type="button" class="btn btn-sm typepoison">Poision</button>
                         <button type="button" class="btn btn-sm typebug">Bug</button>
@@ -56,17 +56,17 @@
             </div>
          </div>
         <div class="row row-centered">
-            <div class="col-xs-8 col-md-12 col-centered col-min"> <h1>General Information</h1>
+            <div class="col-xs-8 col-md-12 col-centered col-min"> <h1 class="secundary">General Information</h1>
                 <div class="item">
                     <table class="table">
                         <tbody>
                             <tr>
-                                <th>Hidden Abilities:</th>
-                                <th>Chlorophyll</th>
+                                <th class="description">Hidden Abilities:</th>
+                                <th class="description">Chlorophyll</th>
                             </tr>
                             <tr>
-                                <th>Location:</th>
-                                <th>Lumiose City</th>
+                                <th class="description">Location:</th>
+                                <th class="description">Lumiose City</th>
                             </tr>
                         </tbody>
                     </table>
@@ -74,11 +74,11 @@
             </div>
         </div>
         <div class="row row-centered">
-            <div class="col-xs-8 col-md-12 col-centered col-min"> <h1>Evolution</h1>
+            <div class="col-xs-8 col-md-12 col-centered col-min"> <h1 class="secundary">Evolution</h1>
                         <div class="row">
                             <div class="col-xs-9">
                                 <img src="media/img/001.png"  alt="Bulbasaur" height="100px" width="100px" class="img-thumbnail"/>
-                                Bulbasaur<br>
+                               Bulbasaur<br>
                                 <button type="button" class="btn btn-sm typegrass">Grass</button>
                                 <button type="button" class="btn btn-sm typepoison">Poison</button>
                                 <button type="button" class="btn btn-sm typebug">Bug</button>
@@ -86,7 +86,7 @@
                             </div>
 
                             <div class="col-xs-3">
-                                #001
+                                <kbd>#001</kbd>
                             </div>
 
                         </div>
@@ -101,8 +101,8 @@
 
                             </div>
                             <div class="col-xs-3">
-                                #002
-                                <br>LV.16
+                                <kbd>#002</kbd>
+                                <br><kbd>LV.16</kbd>
                             </div>
                         </div>
 
@@ -117,8 +117,8 @@
                             </div>
 
                             <div class="col-xs-3">
-                                #003
-                                <br>LV.32
+                                <kbd>#003</kbd>
+                                <br><kbd>LV.32</kbd>
                             </div>
                         </div>
 
@@ -129,6 +129,8 @@
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js\lib\jquery\dist\jquery.min.js"></script>
+    <script src="js\lib\less\dist\less.min.js" type="text/javascript"></script>
+
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js\lib\bootstrap\dist\js\bootstrap.min.js"></script>
 </body>
